Agregamos diseño un poco de css a la aplicacion

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block title %} Django y Google Maps {% endblock %}
 {% block container %}
-	<h1>Creacion de la plantilla</h1>
+	<div id="mapa" class="capas"></div>
+	<div id="datos" class="capas"></div>
 {% endblock %}
