--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>{% block title %} {% endblock %}</title>
+	<link rel="stylesheet" href="{{ STATIC_URL }}css/styles.css">
 </head>
 <body>
 	<div class="container">
