--- a/templates/base.html
+++ b/templates/base.html
@@ -9,5 +9,8 @@
 	<div class="container">
 		{% block container %} {% endblock %}
 	</div>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=true"></script>
+<script src="{{ STATIC_URL }}js/scripts.js"></script>
 </body>
 </html>
