--- a/templates/index.html
+++ b/templates/index.html
@@ -2,5 +2,15 @@
 {% block title %} Django y Google Maps {% endblock %}
 {% block container %}
 	<div id="mapa" class="capas"></div>
-	<div id="datos" class="capas"></div>
+	<div id="datos" class="capas">
+		<div id="form">
+			<form action="post">{% csrf_token %}
+				{{ form.as_p }}
+				<p>
+					<input type="submit" value="Guardar direcci&oacute;n">
+				</p>
+			</form>
+		</div>
+		<div id="data"></div>
+	</div>
 {% endblock %}
